<resources>
    <string name="app_name">HobbyHarbor</string>
    <string name="my_hobbies">My Hobbies:</string>
    <string name="back_to_user_hobbies">Back to user hobbies</string>
    <string name="turn_on_turn_off_notification_for_hobby">Turn On/ Turn Off notification for hobby</string>
    <string name="total">Total:</string>
    <string name="goal">Goal:</string>
    <string name="edit_total_progress_value">Edit total progress value</string>
    <string name="edit_goal_value">Edit goal value</string>
    <string name="add_user_hobby_experience">Add User Hobby Experience</string>
    <string name="add_experience">Add experience</string>
    <string name="image_view_history_of_progress">Image View History of Progress</string>
    <string name="history">History</string>
    <string name="arrow_right_points_user_experience">Arrow Right points user experience</string>
    <string name="edit_user_experience">Edit user experience</string>
    <string name="add_new_user_hobby_button">Add new user hobby button</string>
    <string name="goal_edit">Goad Edit</string>
    <string name="edit_action">Edit action</string>
    <string name="notification_button_pressed">Notification button pressed</string>
    <string name="open_settings">Open settings</string>
    <string name="open_user_profile">Open user profile</string>
    <string name="user_profile_pressed">User Profile Pressed</string>
    <string name="settings_pressed">Settings Pressed</string>
    <string name="error_message_loading_data">Error! Please try again later</string>
    <string name="try_again">Try Again</string>
    <string name="categories">Categories:</string>
    <string name="add_new_category_button">Add new category batton</string>
    <string name="category_icon">Category Icon</string>
    <string name="category">Category</string>
    <string name="category_clicked">category clicked\n</string>
    <string name="try_again_pressed">Try again pressed\n</string>
    <string name="try_again_pressed_not_yet_implemented">Try again pressed but not yet implemented</string>
    <string name="please_wait">Please wait…</string>
    <string name="back_to_categories">Back to categories</string>
    <string name="traveling">Traveling</string>
    <string name="add_custom_hobby_description">Add Custom Hobby Button (show new screen to specify your hobby)</string>
    <string name="choose_hobby_from_the_list">Choose hobby from the list:</string>
    <string name="set_goal_title">Please set up your goal in hours for the hobby</string>
    <string name="goal_hint">Goal</string>
    <string name="submit">Submit</string>
    <string name="add_new_experience">Add new experience:</string>
    <string name="from">From:</string>
    <string name="till">Till:</string>
    <string name="from_picker">From</string>
    <string name="till_picker">Till</string>
    <string name="from_date">From: %1$s</string>
    <string name="till_date">Till: %1$s</string>
    <string name="experience_time">Experience Time:</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>
    <string name="available_hobbies">Available Hobbies:</string>
    <string name="searchbar_hint">Hobby Name</string>
    <string name="navigation_up_button">Navigation Up Button</string>
    <string name="screen_details">{hobbyName}</string>
    <string name="hobbies">Hobbies</string>
    <string name="category_name_hint">Category Name *</string>
    <string name="hobby_name_hint">Hobby Name *</string>
    <string name="cost_hint">Cost</string>
    <string name="place_hint">Place</string>
    <string name="people_hint">People</string>
    <string name="field_is_required_error">%1$s field is required</string>
    <string name="wrappedInBrackets">[%1$s]</string>
    <string name="hobby_exists_exception">The hobby %1$s already exists</string>
    <string name="add_new_user_hobby_button_description">Add new user hobby</string>
    <string name="add_new_custom_hobby_button_description">Add new custom hobby</string>
    <string name="add_new_user_experience_button_description">Add new user experience</string>
    <string name="remove_user_hobbies_title">Remove user hobbies</string>
    <string name="add_custom_hobby_title">Custom hobby information</string>
    <string name="experience_date_borders">%1$s - %2$s</string>

    <!--Errors and Toasts to user-->
    <string name="specified_goal_less_than_reach_progress">Specified goal should be greater than reached progress</string>
    <string name="specified_goal_is_empty">Specified goal is empty</string>
    <string name="requiered_fields_are_empty">It is not possible to add new custom hobby when required fields are not filled</string>
    <string name="incorrect_from_till_datetime">Till Date Time should be after From Date Time</string>
    <string name="date_picker_dialog_was_not_initialized">Date picker dialog was not initialized, feel free to contact with developer team</string>
    <string name="specified_incorrect_time">Hour and minute was not specified correctly</string>
    <string name="change_user_experience_confirmation">User Experience has been changed</string>
    <string name="change_user_experience_error">The error occurred while trying to add new experience</string>
    <string name="no_hobbies_added_message">You have not added hobbies yet, click on add button</string>
    <string name="user_hobby_added_confirmation">New hobby has been added</string>
    <string name="hobby_already_exists">Hobby already exists</string>
    <string name="experience_added_confirmation">New experience has been added</string>
    <string name="experience_added_error">The error occurred while trying to add new experience</string>
    <string name="note">Note</string>
    <string name="upload_images">Upload Images</string>
    <string name="permissions_denied_forever">Permission denied forever</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_forever_message">Permission denied forever message</string>
    <string name="open">Open</string>
    <string name="item_image_description">Selected Image in Gallery</string>
    <string name="note_hint">Note:</string>
    <string name="hint_images">Images:</string>
    <string name="hyphen">-</string>
    <string name="reached_goal_message">You reached the goal, set up new one:)</string>
    <string name="remove_user_hobby_title">Remove %1$s</string>
    <string name="remove_user_hobby_message">Are you sure you want remove these hobbies? All progresses will be removed as well</string>
    <string name="remove_images_title">Remove Images</string>
    <string name="remove_images_message">Are you sure you want remove these images?</string>
    <string name="deleted_items_toast">%1$s Deleted</string>
    <string name="set_notification_title">Set Notification</string>
    <string name="set_notification_message">The notification will appear if you don\'t do your hobby for</string>
    <string name="notificaiton_removed">Notifications for %1$s removed</string>
    <string name="notification_added">Notification for %1$s was added</string>

</resources>
