<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

            <ImageButton
                android:id="@+id/buttonNavigationUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/navigation_up_button"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/app_name"
                />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

            <ImageButton
                android:id="@+id/buttonUserProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user_profile"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/open_settings"
                />

            <ImageButton
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginEnd="4dp"
                android:layout_gravity="end"
                android:contentDescription="@string/open_user_profile"/>


        <ImageButton
            android:id="@+id/buttonNotification"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_notification_active"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/turn_on_turn_off_notification_for_hobby"
            android:visibility="gone"
            />


    </androidx.appcompat.widget.Toolbar>

    <!-- FragmentContainerView -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        tools:context=".app.screens.main.MainActivity"
        app:navGraph="@navigation/nav_graph"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        android:background="@color/white"
        />

</RelativeLayout>
