<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.categorizedhobbies.CategorizedHobbiesFragment">

    <ImageButton
        android:id="@+id/buttonNavigateUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/back_to_categories"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tvCategoryNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        tools:text="@string/traveling"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/buttonNavigateUp"
        app:layout_constraintTop_toTopOf="@id/buttonNavigateUp"
        app:layout_constraintBottom_toBottomOf="@id/buttonNavigateUp"
        />

    <TextView
        android:id="@+id/tvChooseHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_hobby_from_the_list"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategorizedHobbies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseHobby"
        android:layout_marginTop="20dp"
        />

    <ImageButton
        android:id="@+id/buttonAddCustomHobby"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_custom_hobby_description"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCategorizedHobbies"
        />

    <include layout="@layout/part_result" />

</androidx.constraintlayout.widget.ConstraintLayout>