<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experience_time"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:gravity="start"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/fromValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tvFrom"
        app:layout_constraintBottom_toBottomOf="@id/tvFrom"
        app:layout_constraintTop_toTopOf="@id/tvFrom"
        />
    <Button
        android:id="@+id/tvTill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:text="@string/till"
        android:background="?selectableItemBackground"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tvFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tillValue"
        />
    <TextView
        android:id="@+id/tillValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTill"
        app:layout_constraintStart_toStartOf="@id/fromValue"
        app:layout_constraintTop_toTopOf="@id/tvTill"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        style="@style/SubmitButton"
        android:background="@drawable/submit_button"
        app:layout_constraintTop_toBottomOf="@id/tvTill"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>