<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.hobbydetails.UserHobbyDetailsFragment"
    >
    <TextView
        android:id="@+id/tvTotalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        android:text="@string/total"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvGoalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        android:text="@string/goal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotalTitle"
        app:layout_constraintStart_toStartOf="@id/tvTotalTitle"
        />

    <TextView
        android:id="@+id/tvTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalTitle"
        app:layout_constraintStart_toEndOf="@id/tvTotalTitle"
        android:layout_marginStart="10dp"
        tools:text="70hr"
        />

    <TextView
        android:id="@+id/tvGoalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="@id/tvGoalTitle"
        app:layout_constraintStart_toStartOf="@id/tvTotalValue"
        tools:text="70hr"
        />

    <ImageButton
        android:id="@+id/buttonEditGoal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_edit"
        android:layout_marginStart="6dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_goal_value"
        app:layout_constraintStart_toEndOf="@id/tvGoalValue"
        app:layout_constraintBottom_toBottomOf="@id/tvGoalValue"
        app:layout_constraintTop_toTopOf="@id/tvGoalValue"
        />

    <View
        android:id="@+id/progressSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:constraint_referenced_ids="tvGoalTitle, tvGoalValue, buttonEditGoal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvGoalTitle"
        />

        <Button
            android:id="@+id/buttonAddExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="26sp"

            android:background="?selectableItemBackground"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:text="@string/add_experience"
            android:textStyle="normal"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:drawableLeftCompat="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@id/progressSeparator"
            app:layout_constraintStart_toStartOf="parent"
            />

    <View
        android:id="@+id/addExperienceSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:constraint_referenced_ids="buttonAddExperience"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAddExperience"
        />

    <ImageView
        android:id="@+id/ivHistory"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/addExperienceSeparator"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_history"
        android:contentDescription="@string/image_view_history_of_progress"
        />

    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="30sp"

        android:text="@string/history"
        app:layout_constraintStart_toEndOf="@+id/ivHistory"
        app:layout_constraintBottom_toBottomOf="@id/ivHistory"
        app:layout_constraintTop_toTopOf="@id/ivHistory"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUserActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="124dp"
        app:layout_constraintTop_toBottomOf="@id/ivHistory"
        tools:layout_editor_absoluteX="7dp" />

    <include layout="@layout/part_result" />

</androidx.constraintlayout.widget.ConstraintLayout>