<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryNameLayout"
        style="@style/ExposedDropMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/category_name_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/categoryNameInput"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hobbyNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hobby_name_hint"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hobbyNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/costContainer"
        style="@style/ExposedDropMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hobbyNameLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/costInput"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeContainer"
        style="@style/ExposedDropMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costContainer">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/placeInput"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/peopleContainer"
        style="@style/ExposedDropMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/people_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeContainer">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/peopleInput"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>